# HITSZ_RMVISION_2021

./: CMakeLists.txt  README.md  calibrate_get_imgs.cpp  main.cpp  test.cpp
armor/include/armor_finder/: armor_box.h  armor_finder.h
armor/include/armor_finder/classifier/: classifier.h
armor/src/armor_finder/: armor_finder.cpp
armor/src/armor_finder/anti_top/: anti_top.cpp
armor/src/armor_finder/armor_box/: armor_box.cpp
armor/src/armor_finder/classifier/: classifier.cpp
armor/src/armor_finder/find/: find_armor_box.cpp  find_light_blobs.cpp
armor/src/armor_finder/searching_state/: searching_state.cpp
armor/src/armor_finder/send_target/: send_target.cpp
armor/src/armor_finder/tracking_state/: tracking_state.cpp
armor/src/show_images/: show_images.cpp
cam_calibrate/: cali_pre.py  calibrate.npz
com/include/: rmserial.h
com/src/: rmserial.cpp
config/include/: constants.h  rmconfig.h  runtime.h
config/src/: rmconfig.cpp  runtime.cpp
net/include/: NumberDetector.h  Trt.h
net/src/: NumberDetector.cpp
others/include/camera/: cam_wrapper.h
others/src/camera/: cam_wrapper.cpp
